# ghostarr

./: .env.example  .gitignore  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  GITHUB_RELEASES.md  README.md  package-lock.json  package.json
src/backend/: README.md  alembic.ini  init_db.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_add_scheduled_deletion.py
src/backend/app/: __init__.py  config.py  database.py  main.py  version.py
src/backend/app/core/: events.py  exceptions.py  logging.py
src/backend/app/integrations/: __init__.py  audiobookshelf.py  base.py  ghost.py  komga.py  overseerr.py  radarr.py  romm.py  sonarr.py  tautulli.py  tmdb.py  tunarr.py
src/backend/app/models/: __init__.py  history.py  label.py  log.py  schedule.py  setting.py  template.py  user_preference.py
src/backend/app/schemas/: __init__.py  common.py  generation.py  history.py  label.py  log.py  schedule.py  settings.py  template.py
src/backend/app/services/: crypto_service.py  deletion_service.py  image_compositor.py  newsletter_generator.py  progress_tracker.py  scheduler_service.py  template_service.py
src/backend/data/templates/: default.html  template_airport.html  template_alien.html  template_anime.html  template_apple.html  template_art_deco.html  template_bento.html  template_blog.html  template_blueprint.html  template_bobine_cinema.html  template_bookclub.html  template_brutalist.html  template_casino.html  template_cinema_tickets.html  template_comic.html  template_complet.html  template_complet_small.html  template_cyberpunk.html  template_dark_minimal.html  template_disco.html  template_fanart.html  template_film_noir.html  template_gaming.html  template_glassmorphism.html  template_gradient_mesh.html  template_halloween.html  template_harry_potter.html  template_horror.html  template_instagram.html  template_iphone.html  template_mixe.html  (+48 more)
src/backend/tests/: test_health.py
(+134 files in other folders)
